<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_nutrition_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nutrition_bg"
    tools:context=".nutritionTracker.NutritionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/add_nutrition_item_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_nutrition_entry_food_item_hint"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/add_nutrition_item_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_nutrition_entry_food_item_hint" />

        <TextView
            android:id="@+id/add_nutrition_calories_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_nutrition_entry_calories_hint"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/add_nutrition_calories_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_nutrition_entry_calories_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_nutrition_fat_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_nutrition_entry_fat_hint"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/add_nutrition_fat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_nutrition_entry_fat_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_nutrition_carbohydrates_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_nutrition_entry_carbohydrates_hint"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/add_nutrition_carbohydrates_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_nutrition_entry_carbohydrates_hint"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/add_nutrition_entry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_entry" />

    </LinearLayout>
</FrameLayout>